test/files/neg/t1286.check
a.scala:1: error: Companions 'object Foo' and 'trait Foo' must be defined in same file:
  Found in t1286/b.scala and t1286/a.scala
trait Foo {
      ^
b.scala:1: error: Companions 'trait Foo' and 'object Foo' must be defined in same file:
  Found in t1286/a.scala and t1286/b.scala
object Foo extends Foo {
       ^
two errors found
